--- a/app/src/main/res/layout/activity_comparing_list.xml
+++ b/app/src/main/res/layout/activity_comparing_list.xml
@@ -2,26 +2,26 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_layout_comparing_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewAndModels.ComparingListActivity"
-    android:id="@+id/coordinator_layout_comparing_list"
-    android:background="@android:color/darker_gray">
+    android:background="@android:color/darker_gray"
+    tools:context=".ViewAndModels.ComparingListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/comparingListRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/list_item_text"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"/>
+        android:layout_marginRight="8dp"
+        tools:listitem="@layout/list_item_text" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_add_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_input_add"
         android:layout_gravity="bottom|end"
-        android:layout_margin="32dp"/>
+        android:layout_margin="32dp"
+        android:src="@android:drawable/ic_input_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
