--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,7 +115,7 @@
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toEndOf="@+id/imagetime"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintWidth_percent="0.25">
+                            app:layout_constraintWidth_percent="0.23">
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -137,7 +137,7 @@
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintWidth_percent="0.25">
+                            app:layout_constraintWidth_percent="0.23">
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -159,7 +159,7 @@
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toEndOf="@+id/imageweather"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintWidth_percent="0.25">
+                            app:layout_constraintWidth_percent="0.23">
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -181,7 +181,7 @@
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toEndOf="@+id/imagetrain"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintWidth_percent="0.20">
+                            app:layout_constraintWidth_percent="0.23">
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -216,7 +216,7 @@
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toEndOf="@+id/imagearduino2"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintWidth_percent="0.20">
+                            app:layout_constraintWidth_percent="0.23">
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -238,7 +238,7 @@
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintWidth_percent="0.20">
+                            app:layout_constraintWidth_percent="0.23">
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -260,7 +260,7 @@
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toEndOf="@+id/imagestandby"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintWidth_percent="0.20">
+                            app:layout_constraintWidth_percent="0.23">
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -282,7 +282,7 @@
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toEndOf="@+id/imagearduino1"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintWidth_percent="0.20">
+                            app:layout_constraintWidth_percent="0.23">
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -300,9 +300,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
+                        android:backgroundTint="@color/primary_green"
                         android:progress="100"
-                        android:backgroundTint="@color/beige_palette"
-                        android:thumbTint="@color/beige_palette" />
+                        android:thumbTint="@color/primary_green" />
 
                     <TextView
                         android:id="@+id/textViewMorematrixOptions"
@@ -311,7 +311,7 @@
                         android:layout_marginBottom="8dp"
                         android:gravity="center"
                         android:text="More Options"
-                        android:textColor="@color/green_yellow_palette" />
+                        android:textColor="@color/primary_green_lighter" />
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -388,7 +388,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageplant"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintWidth_percent="0.3">
+                        app:layout_constraintWidth_percent="0.28">
 
                         <ImageView
                             android:layout_width="wrap_content"
@@ -488,8 +488,6 @@
             </androidx.cardview.widget.CardView>
 
 
-
-
         </LinearLayout>
     </LinearLayout>
 
@@ -500,8 +498,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
+        android:backgroundTint="@color/primary_green"
         android:clickable="true"
-        android:backgroundTint="@color/beige_palette"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/icon_gear" />
