--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -50,11 +50,11 @@
                     android:backgroundTint="@android:color/white"
                     android:ems="10"
                     android:hint="Default IP"
+                    android:importantForAutofill="no"
                     android:inputType="textPersonName"
                     android:text="192.168.0.11"
                     android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_size"
-                    android:importantForAutofill="no" />
+                    android:textSize="@dimen/text_size" />
 
             </LinearLayout>
 
@@ -79,11 +79,11 @@
                     android:backgroundTint="@android:color/white"
                     android:ems="10"
                     android:hint="Port"
+                    android:importantForAutofill="no"
                     android:inputType="numberSigned"
                     android:text="15439"
                     android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_size"
-                    android:importantForAutofill="no" />
+                    android:textSize="@dimen/text_size" />
 
             </LinearLayout>
 
