--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,11 @@
 <resources>
     <dimen name="text_size">14sp</dimen>
+    <dimen name="material_large_padding">24dp</dimen>
+    <dimen name="material_default_padding">16dp</dimen>
+    <dimen name="material_small_padding">8dp</dimen>
+    <dimen name="material_tiny_padding">4dp</dimen>
+    <dimen name="material_card_view_padding">8dp</dimen>
+    <dimen name="material_corner_radius">8dp</dimen>
+    <dimen name="material_default_elevation">12dp</dimen>
+    <dimen name="thumbnail_size">75dp</dimen>
 </resources>
