--- a/app/src/main/res/layout/activity_add_comparing_list.xml
+++ b/app/src/main/res/layout/activity_add_comparing_list.xml
@@ -16,6 +16,7 @@
         android:backgroundTint="@color/white"
         app:cardCornerRadius="8dp"
         app:cardElevation="5sp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -59,38 +60,5 @@
                 android:text="Save" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_Text_List_Container">
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/addImageButton"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="16dp"
-            android:padding="16dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_outline_add_photo_alternate_24px"
-            app:cornerRadius="@dimen/material_corner_radius" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/imageRecyclerView"
-            android:layout_width="200dp"
-            android:background="@color/white"
-            android:layout_height="200dp"
-            android:layout_weight="1"
-            android:scrollbars="horizontal" />
-
-    </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
