--- a/app/src/main/res/layout/activity_add_comparing_list.xml
+++ b/app/src/main/res/layout/activity_add_comparing_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
-    tools:context=".component.comparing.AddComparingListActivity">
+    tools:context=".component.comparing.firstlevel.AddComparingListActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/edit_Text_List_Container"
