--- a/app/src/main/res/layout/activity_comparing_element.xml
+++ b/app/src/main/res/layout/activity_comparing_element.xml
@@ -2,11 +2,11 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coordinator_layout_note"
+    android:id="@+id/coordinator_layout_element"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
-    tools:context=".component.comparing.ComparingElementActivity">
+    tools:context=".component.comparing.secondlevel.ComparingElementActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/comparing_element_recycler_view"
