--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -32,7 +32,7 @@
                 app:cardCornerRadius="8dp">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/list_thumbnail_image_view"
                     android:layout_width="wrap_content"
                     android:layout_height="140dp"
                     android:adjustViewBounds="true"
