--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -34,7 +34,7 @@
                 <ImageView
                     android:id="@+id/list_thumbnail_image_view"
                     android:layout_width="wrap_content"
-                    android:layout_height="140dp"
+                    android:layout_height="@dimen/thumbnail_size_list"
                     android:adjustViewBounds="true"
                     android:scaleType="fitXY"
                     app:srcCompat="@drawable/icon_plant" />
