--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="material_corner_radius">8dp</dimen>
     <dimen name="material_default_elevation">12dp</dimen>
     <dimen name="thumbnail_size">75dp</dimen>
+    <dimen name="thumbnail_size_list">140dp</dimen>
 </resources>
