--- a/app/src/main/res/layout/activity_plant_overview.xml
+++ b/app/src/main/res/layout/activity_plant_overview.xml
@@ -23,7 +23,7 @@
 
             android:id="@+id/plant_view_recycler"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:paddingBottom="24dp"
