--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
-    tools:context=".component.comparing.secondlevel.AddComparingElementActivity">
+    tools:context=".component.comparing.secondlevel.AddElementActivity">
 
 
     <androidx.cardview.widget.CardView
