--- a/app/src/main/res/layout/list_item_text.xml
+++ b/app/src/main/res/layout/list_item_text.xml
@@ -27,7 +27,7 @@
                 style="bold"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:maxLines="1"
                 android:text="Card Title"
                 android:textColor="@android:color/black"
@@ -36,7 +36,7 @@
                 app:autoSizeTextType="uniform" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/upper_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/title"
@@ -47,10 +47,10 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/lower_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView"
+                android:layout_below="@+id/upper_info"
                 android:maxLines="2"
                 android:text=""
                 android:textColor="@color/light_grey"
