edit mode called from plant view

--- a/app/src/main/res/layout/activity_plant_overview.xml
+++ b/app/src/main/res/layout/activity_plant_overview.xml
@@ -35,10 +35,13 @@
         android:id="@+id/button_add_element"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:contentDescription="Add Plant"
         android:src="@android:drawable/ic_input_add"
+        android:backgroundTint="@color/primary_green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
