--- a/app/src/main/res/layout/fragment_plant_overview.xml
+++ b/app/src/main/res/layout/fragment_plant_overview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
-    tools:context=".PlantOverviewFragment">
+    tools:context=".component.plant.PlantOverviewFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeContainer"
