--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -46,7 +46,7 @@
                 android:layout_margin="4dp">
 
                 <TextView
-                    android:id="@+id/title"
+                    android:id="@+id/text_view_title"
                     style="bold"
                     android:layout_width="match_parent"
                     android:layout_height="56dp"
@@ -59,10 +59,10 @@
                     app:autoSizeTextType="uniform" />
 
                 <TextView
-                    android:id="@+id/upper_info"
+                    android:id="@+id/text_view_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/title"
+                    android:layout_below="@+id/text_view_title"
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@android:color/darker_gray"
@@ -70,10 +70,10 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/lower_info"
+                    android:id="@+id/text_view_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/upper_info"
+                    android:layout_below="@+id/text_view_info"
                     android:maxLines="2"
                     android:text=""
                     android:textColor="@color/light_grey"
@@ -84,7 +84,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/delete_button"
+            android:id="@+id/button_delete_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
